tests/failing/bad-return-value-3.c
int f1() {
    return; // should provide value
}